030-software/fluxcd/apps/grist/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grist
  annotations:
    dashboard.${domain}/name: grist
    dashboard.${domain}/url: https://grist.${domain}
    dashboard.${domain}/icon: google-spreadsheet
spec:
  hostnames:
  - grist.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: grist
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
